<resources>
    <string name="app_name">RIG</string>
    <string name="emailFilled">Email must be filled</string>
    <string name="passFilled">Password must be filled</string>
    <string name="invalidCredential">Invalid credential</string>
    <string name="create_your_account">Create Account</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_email">Email (.edu)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_initial">Initial (Ex. XX20-1)</string>
    <string name="create_account">Create Account</string>
    <string name="username_filled">Name must be filled</string>
    <string name="initial">Initial must be correct</string>
    <string name="sign_up_error">Create account failed</string>
    <string name="testing_text">DJ20-1</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_account">Update account</string>
    <string name="edit_success">Profile updated</string>
    <string name="edit_failed">Failed to update</string>
    <string name="meeting_updated">Meeting updated</string>
    <string name="meeting_added">Meeting added</string>
    <string name="desc">Description must be filled</string>
    <string name="meetId">Meeting id must be filled</string>
    <string name="meetPass">Meeting password must be filled</string>
    <string name="pickdate">Pick the date please</string>
    <string name="timeH">Time must be filled (dont forget \":\")</string>
    <string name="link">Link must be filled</string>
    <string name="checkAst">Please check the candidate (at least 1)</string>
    <string-array name="role">
        <item>Admin</item>
        <item>Supervisor</item>
        <item>Network Administrator</item>
        <item>Subject Coordinator</item>
        <item>Assistant</item>
    </string-array>
</resources>